@@ -1,9 +1,7 @@
 package com.divit.springboot.application.util;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import com.divit.springboot.application.model.Candidate;
 
@@ -19,11 +17,11 @@ public final class CandidatesUtil {
 	 * @return list of candidates
 	 */
 	public static List<Candidate> getCandidates() {
-		List<Candidate> candidateList = new ArrayList<>();
-		candidateList.add(new Candidate("John", 2, new HashSet<String>(Arrays.asList("java", "c#", "c++", "golang"))));
-		candidateList.add(new Candidate("David", 1, new HashSet<String>(Arrays.asList("javaScript", "c++"))));
-		candidateList.add(new Candidate("Diana", 4, new HashSet<String>(Arrays.asList("java", "python"))));
-		candidateList.add(new Candidate("June", 2, new HashSet<String>(Arrays.asList("ruby", "aws", "docker"))));
+		var candidateList = List.of(
+				new Candidate("John", 2, Set.of("java", "c#", "c++", "golang")),
+				new Candidate("David", 1, Set.of("javaScript", "c++")),
+				new Candidate("Diana", 4, Set.of("java", "python")),
+				new Candidate("June", 2, Set.of("ruby", "aws", "docker")));
 
 		return candidateList;
 	}
